Support mfa enroll in embedded api (#364)
